[package]
name = "ogg-opus-wasm"
version = "0.0.1"
authors = ["kujirahand <web@kujirahand.com>"]
edition = "2018"
license = "MIT"
description = "A decoder/encoder for Ogg Opus for WASM"
repository = "https://github.com/kujirahand/ogg-opus-wasm"

exclude = ["test_assets/*", "*.sh"] # Don't upload files for testing

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ogg = "^0.8"
audiopus = "^0.2" 
byteorder = "^1.3"
thiserror = "^1.0"
wasm-bindgen = "0.2"

# rand = "^0.8"
# parking_lot = version = "^0.12"

[dev-dependencies]
wav = "^1.0"
